--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,10 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Grenze+Gotisch&display=swap');
+@import "tailwindcss";
+@import "tailwindcss/utilities";
 
-body {
-  margin: 0;
-  font-family: 'Lato', sans-serif;
+@layer utilities {
+  .font-gotisch {
+    font-family: 'Grenze Gotisch', serif;
+  }
 }
-
-.footer {
-  background: url(./images/footer.svg) top center no-repeat;
-  background-size: cover;
-}
-
-.cta {
-  background: linear-gradient(rgba(2,2,2,.7),rgba(0,0,0,.7)),url(https://images.unsplash.com/photo-1497215728101-856f4ea42174?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80) fixed center center;
-}
-
-
+@plugin "tailwind-scrollbar-hide";
