--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Grenze+Gotisch&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Open+Sans:wght@300;400;600;700&display=swap');
 @import "tailwindcss";
 @import "tailwindcss/utilities";
 
 @layer utilities {
   .font-gotisch {
     font-family: 'Grenze Gotisch', serif;
+  }
+  .font-heading {
+    font-family: 'Anton', sans-serif;
+  }
+
+  .font-body {
+    font-family: 'Open Sans', sans-serif;
+  }
+  .drop-shadow-glow {
+    drop-shadow: 0 0 12px rgba(255, 255, 255, 0.8);
+  }
+}
+@layer base {
+  body {
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+    background-color: black;
+    -webkit-font-smoothing: antialiased;
+  }
+
+  h1, h2, h3, h4 {
+    font-family: 'Anton', sans-serif;
   }
 }
 @plugin "tailwind-scrollbar-hide";
